@@ -19,19 +19,19 @@ public class App
     {
     	
 		
-		Authenticator myAuth = new Authenticator() {
-			@Override 
-			protected PasswordAuthentication getPasswordAuthentication() {
-			  return new PasswordAuthentication("ricardo", "123456".toCharArray());
-			} 
-		};
-		
-		Authenticator.setDefault(myAuth);
+		/*
+		 * Authenticator myAuth = new Authenticator() {
+		 * 
+		 * @Override protected PasswordAuthentication getPasswordAuthentication() {
+		 * return new PasswordAuthentication("ricardo", "123456".toCharArray()); } };
+		 * 
+		 * Authenticator.setDefault(myAuth);
+		 */
 		 
     	
-    	//File fileWSDL=new File("src/main/resources/ClienteWS.wsdl");        
-		//URL wsdlUrl = fileWSDL.toURI().toURL();
-    	URL wsdlUrl = new URL("http://localhost:8080/ClientesWS-SOAP-JAX-WS-Security/ClienteWS?wsdl");
+    	File fileWSDL=new File("src/main/resources/ClienteWS.wsdl");        
+		URL wsdlUrl = fileWSDL.toURI().toURL();
+    	//URL wsdlUrl = new URL("http://localhost:8081/ClientesWS-SOAP-JAX-WS-Security/ClienteWS?wsdl");
 		QName qname = new QName("http://ricardomarcelo.pe/ws/ventas/","ClienteWS"); 
 		Service service = Service.create(wsdlUrl, qname); 
 		ClienteWS clienteWS = service.getPort(ClienteWS.class);
@@ -40,13 +40,13 @@ public class App
 		cliente.setNombre("Ricardo"); cliente.setDireccion("Lima");
 		cliente.setTelefono("8887777");
 		 
-		/*
+		
 		//Agregar user y pass al contenedor de autenticación 
 		BindingProvider bp = (BindingProvider) clienteWS;
 		  
 		bp.getRequestContext().put(BindingProvider.USERNAME_PROPERTY, "ricardo");
 		bp.getRequestContext().put(BindingProvider.PASSWORD_PROPERTY, "123456");
-		*/
+		
 		String resulatdo = clienteWS.crear(cliente); System.out.println(resulatdo);
 		 			
 	 
